Update SecurityConfigurations.java
Deploying backend to my own VPS